--- a/assets/css/scrollbar.scss
+++ b/assets/css/scrollbar.scss
@@ -27,5 +27,15 @@
   display: none;
 }
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 
 /* ----------------------------------------- Scrollbars */
